# demo_ai_app

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  sample_upsert_2.md
.devcontainer/: devcontainer.json
chatbot/: .env.example  README.md  pyproject.toml
chatbot/src/chatbot/: main.py
customer-support-chatbot/: .env.example  README.md  main.py  requirements.txt
customer-support-chatbot/.devcontainer/: devcontainer.json
health-connect-ai/: Dockerfile  README.md  requirements.txt
health-connect-ai/.devcontainer/: devcontainer.json
health-connect-ai/backend/: logging_config.py  main.py  models.py  rate_limiter.py
health-connect-ai/rasa/: config.yml  domain.yml  train_rasa.py
health-connect-ai/rasa/data/: nlu.yml  rules.yml
src/chatbot/: cache.py  config.py  main.py  model.py  openai.py  qdrant_client.py  util.py
telehealth-chatbot/: .env.example  README.md  main.py  requirements-dev.txt  requirements.txt
telehealth-chatbot/.devcontainer/: devcontainer.json
